# fs_mod_parser

./: .gitignore  Cargo.toml  README.md  orig.js
examples/: simple_usage.rs
src/: base_parse.rs  data.rs  files.rs  lib.rs  main.rs  parsers.rs
src/data/: flags.rs  functions.rs  maps.rs  structs.rs
src/maps/: data.rs  mod.rs  structs.rs
src/mod_basic/: mod.rs
src/mod_detail/: mod.rs  places.rs  structs.rs  vehicles.rs
src/savegame/: mod.rs
src/shared/: errors.rs  files.rs  mod.rs  structs.rs
test_mods/EXAMPLE_Valid_Folder/: FSGeTractors.dds  modDesc.xml  modIcon.dds
test_mods/EXAMPLE_Valid_Folder/i3d/: rubicon9000.i3d
test_mods/EXAMPLE_Valid_Folder/languages/: l10n_de.xml  l10n_en.xml
test_mods/EXAMPLE_Valid_Folder/store/: store_bigX1180.dds  store_braud9070L.dds  store_fastrac4220.dds  store_fastrac8330.dds  store_lexion8000.dds  store_magnumT4B.dds  store_rubicon9000.dds  store_series6R.dds  store_series7.dds  store_series7720S.dds  store_series8RX.dds  store_series9RT.dds  store_steiger4WD.dds  store_superliner1979.dds  store_t8.dds  store_t9.dds  store_tSeries.dds  store_tk4.dds  store_trion750.dds  store_vario1000.dds  store_xuv865M.dds
test_mods/EXAMPLE_Valid_Folder/tracks/: series9RTCrawler.xml  series9RTCrawlerWeights.xml
test_mods/EXAMPLE_Valid_Folder/xml/: fsge_bigX1180.xml  fsge_braud9070L.xml  fsge_fastrac4220.xml  fsge_fastrac8330.xml  fsge_lexion8000.xml  fsge_magnumT4B.xml  fsge_rubicon9000.xml  fsge_series6R.xml  fsge_series7.xml  fsge_series7720S.xml  fsge_series8RX.xml  fsge_series9RT.xml  fsge_steiger4WD.xml  fsge_superliner1979.xml  fsge_t8.xml  fsge_t9.xml  fsge_tSeries.xml  fsge_tk4.xml  fsge_trion750.xml  fsge_vario1000.xml  fsge_xuv865M.xml
tests/: basic_mod_json.rs  detail.rs  fail_broken_zip.rs  file_failures.rs  maps.rs  not_fatal_warnings.rs  savegames.rs  scan_real_mods.rs  scan_real_saves.rs  scan_test_items.rs  zip_pack.rs
tests/test_mods/PASS_Good_Simple_Mod/: modDesc.xml
tests/test_mods/SAVEGAME_Malformed/: placeables.xml
