[package]
name = "fs_mod_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
glob = "0.3.1"
md5 = "0.7.0"
pathdiff = "0.2.2"
regex = "1.11.0"
roxmltree = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
zip = "=2.1.3"
image = { version = "0.25.2", default-features = false, features = ["rayon"] }
image_dds = "0.6.0"
base64 = "0.22.1"
webp = "0.3.0"
