[package]
authors = ["JTSage <jtsage@gmail.com>"]
categories = ["parser-implementations"]
description = "Mod File Parser for Farming Simulator"
documentation = "https://docs.rs/fs_mod_parser"
edition = "2021"
homepage = "https://github.com/jtsage/fs_mod_parser"
keywords = ["parse", "farm_sim"]
license = "ISC"
name = "fs_mod_parser"
readme = "README.md"
repository = "https://github.com/jtsage/fs_mod_parser"
version = "0.1.4"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
glob = "0.3.1"
image = { version = "0.25.2", default-features = false}
image_dds = {version = "0.6.0", default-features = false, features = ["image", "ddsfile"]}
md5 = "0.7.0"
pathdiff = "0.2.2"
roxmltree = { version = "0.20.0", default-features = false, features = ["std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
webp = "0.3.0"
zip = { version = "=2.1.3", default-features = false, features = ["deflate", "deflate64", "lzma", "time", "zstd"]}
rayon = "1.10.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
